--- a/src/main/resources/templates/user-home.html
+++ b/src/main/resources/templates/user-home.html
@@ -94,11 +94,11 @@
     </header>
 
     <main class="container d-flex justify-content-center flex-grow-1">
-        <div class="row justify-content-around align-items-center flex-fill">
-            <div class="col-sm-10 col-md-6">
-                <h1>Test of the Day</h1>
+        <div class="row justify-content-around align-items-center flex-fill gap-3">
+            <div class="col-sm-11 col-md-11 col-lg-6">
+                <h1 class="mb-3">Test of the Day</h1>
                 <div class="bg-secondary rounded shadow border border-2 border-black p-2 fs-5 text-white text-center overflow-auto"
-                     style="height: 455px">
+                     style="height: 545px">
                     <div class="question">
                         <p>1.In Greek mythology, who did Jocasta marry?</p>
                         <div class="d-flex justify-content-center gap-2">
@@ -221,8 +221,37 @@
                     </div>
                 </div>
             </div>
-            <div class="col-ms-10 col-md-4">
-                asdads
+            <div class="col-sm-11 col-md-11 col-lg-5">
+                <h1 class="mb-3">Miscellaneous</h1>
+                <div class="bg-secondary shadow rounded border border-2 border-black p-3 text-black flex-column gap-2">
+                    <div class="card shadow mb-2">
+                        <div class="card-body">
+                            <h5 class="card-title">Random Fact</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <button class="btn btn-secondary border border-black border-2 shadow rounded">Generate
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card shadow mb-2">
+                        <div class="card-body">
+                            <h5 class="card-title">Random Joke</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <button class="btn btn-secondary border border-black border-2 shadow rounded">Generate
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card shadow">
+                        <div class="card-body">
+                            <h5 class="card-title">Random Quote</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <button class="btn btn-secondary border border-black border-2 shadow rounded">Generate
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
