--- a/src/main/resources/templates/user-home.html
+++ b/src/main/resources/templates/user-home.html
@@ -1,97 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:fragment="head">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>TestingEz</title>
-    <link
-            rel="icon"
-            type="image/x-icon"
-            href="/images/school.png"
-    />
-    <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/typography.css"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-    />
-</head>
+<div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-5">
-    <header th:fragment="header" class="flex-shrink-0 border-bottom border-black shadow">
-        <nav class="navbar navbar-expand-lg bg-secondary">
-            <div class="container-fluid gap-1">
-                <a
-                        class="navbar-brand bg-light rounded shadow px-1 fs-5 border border-black border-2"
-                        th:href="@{/user/profile}"
-                >
-                    <img
-                            src="/images/astronaut.png"
-                            alt="default-avatar"
-                            width="35"
-                            height="35"
-                            class="d-inline-block align-text-middle me-1"
-                    /><span sec:authentication="name"></span></a
-                >
-                <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup"
-                        aria-controls="navbarNavAltMarkup"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
-                        <a
-                                class="nav-link text-center text-dark fs-5 link-light active"
-                                aria-current="page"
-                                th:href="@{/user/home}"
-                        >Home</a>
-                        <a
-                                class="nav-link text-center text-dark fs-5 link-light active"
-                                aria-current="page"
-                                th:href="@{/test/join}"
-                        >Join Test</a>
-                        <a
-                                class="nav-link text-center text-dark fs-5 link-light"
-                                th:href="@{/test/create}"
-                        >Create Test</a>
-                        <a class="nav-link text-center text-dark fs-5 link-light" href="#"
-                        >My Results</a>
-                        <a class="nav-link text-center text-dark fs-5 link-light" href="#"
-                        >My Tests</a>
-                        <a class="nav-link text-center text-warning fs-5 link-light"
-                           href="#"
-                           sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
-                        >All Tests</a>
-                        <a class="nav-link text-center text-warning fs-5 link-light"
-                           href="#"
-                           sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
-                        >All Users</a>
-                    </div>
-                    <div class="navbar-nav ms-auto">
-                        <form
-                                class="text-center"
-                                method="post"
-                                th:action="@{/account/logout}">
-                            <button
-                                    class="bnt bg-light rounded shadow px-3 py-2 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
-                                    type="submit"
-                            >
-                                Log out
-                            </button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="container d-flex justify-content-center flex-grow-1">
         <div class="row justify-content-around align-items-center flex-fill gap-3">
@@ -256,43 +168,9 @@
         </div>
     </main>
 
-    <footer th:fragment="footer" class="shadow rounded border-top border-black bg-secondary">
-        <div class="container-fluid">
-            <footer class="container bg-secondary">
-                <ul class="nav justify-content-center pb-3 mb-3">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">FAQs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">About</a>
-                    </li>
-                </ul>
-                <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
-            </footer>
-        </div>
-    </footer>
+    <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
 
-<div th:fragment="scripts">
-    <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-    ></script>
-    <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-            integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-            crossorigin="anonymous"
-    ></script>
-</div>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
