--- a/src/main/resources/templates/user-home.html
+++ b/src/main/resources/templates/user-home.html
@@ -5,84 +5,162 @@
 <div class="d-flex flex-column vh-100 gap-5">
     <div th:replace="~{fragments/headers :: header}"></div>
 
-    <main
-            class="container d-flex justify-content-center align-items-center flex-grow-1"
-    >
-        <div class="row gap-3 flex-fill">
-            <div class="col-sm-1 flex-fill align-self-center">
-                <form
-                        id="testEntranceForm"
-                        class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
-                >
-                    <div class="mb-3 flex-fill text-center">
-                        <label for="testCode" class="form-label fs-4 text-white"
-                        >Enter Test Code:</label
-                        >
-                        <input
-                                type="text"
-                                class="form-control border border-black fs-6"
-                                id="testCode"
-                                placeholder="e.g., r%s12#t^"
-                                required
-                        />
+    <main class="container d-flex justify-content-center flex-grow-1">
+        <div class="row justify-content-around align-items-center flex-fill gap-3">
+            <div class="col-sm-11 col-md-11 col-lg-6">
+                <h1 class="mb-3">Test of the Day</h1>
+                <div class="bg-secondary rounded shadow border border-2 border-black p-2 fs-5 text-white text-center overflow-auto"
+                     style="height: 545px">
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
                     </div>
-                    <button
-                            type="submit"
-                            class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
-                    >
-                        join
-                    </button>
-                </form>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-1 flex-fill">
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <div
-                                    class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column"
-                            >
-                                <h3 class="text-white text-center">Previous Results:</h3>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">MAT #1</div>
-                                    <div class="test-name">24.05.24</div>
-                                    <div class="test-result">0/10</div>
-                                </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">BEL #2</div>
-                                    <div class="test-name">21.05.24</div>
-                                    <div class="test-result">10/10</div>
-                                </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">AE #3</div>
-                                    <div class="test-name">20.05.24</div>
-                                    <div class="test-result">3/10</div>
-                                </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">AE #4</div>
-                                    <div class="test-name">19.05.24</div>
-                                    <div class="test-result">6/10</div>
-                                </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">MAT #5</div>
-                                    <div class="test-name">18.05.24</div>
-                                    <div class="test-result">9/10</div>
-                                </div>
-                                <a
-                                        class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                                        href="#"
-                                >show all</a
-                                >
-                            </div>
+            <div class="col-sm-11 col-md-11 col-lg-5">
+                <h1 class="mb-3">Miscellaneous</h1>
+                <div class="bg-secondary shadow rounded border border-2 border-black p-3 text-black flex-column gap-2">
+                    <div class="card shadow mb-2">
+                        <div class="card-body">
+                            <h5 class="card-title">Random Fact</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <button class="btn btn-secondary border border-black border-2 shadow rounded">Generate
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card shadow mb-2">
+                        <div class="card-body">
+                            <h5 class="card-title">Random Joke</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <button class="btn btn-secondary border border-black border-2 shadow rounded">Generate
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card shadow">
+                        <div class="card-body">
+                            <h5 class="card-title">Random Quote</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <button class="btn btn-secondary border border-black border-2 shadow rounded">Generate
+                            </button>
                         </div>
                     </div>
                 </div>
