questions create process changes, the question count is now get from the db and not from request params

--- a/src/main/resources/templates/questions-create.html
+++ b/src/main/resources/templates/questions-create.html
@@ -10,7 +10,7 @@
                     class="needs-validation"
                     method="post"
                     novalidate
-                    th:action="@{/questions}"
+                    th:action="@{/questions/create}"
                     th:object="${testQuestionsData}"
             >
                 <div th:each="question, questionIndex : ${testQuestionsData.questions}">
