--- a/src/main/resources/templates/test-join.html
+++ b/src/main/resources/templates/test-join.html
@@ -9,6 +9,10 @@
         <div class="row gap-3 flex-fill">
             <div class="col-sm-1 flex-fill align-self-center">
                 <form
+                        novalidate
+                        th:method="post"
+                        th:object="${testJoinData}"
+                        th:action="@{/test/join}"
                         id="testEntranceForm"
                         class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
                 >
@@ -18,11 +22,22 @@
                         </label>
                         <input
                                 type="text"
+                                th:field="*{code}"
                                 class="form-control border border-black fs-6"
                                 id="testCode"
                                 placeholder="e.g., r%s12#t^"
                                 required
                         />
+                        <div th:if="${testNotFound}" class="text-warning fs-6">
+                            Sorry, we couldn't find this test!
+                        </div>
+                        <div th:if="${testClosed}" class="text-warning fs-6">
+                            Sorry, seems like the test is closed!
+                        </div>
+                        <div class="text-warning fs-6"
+                             th:errors="*{code}"
+                             th:if="${#fields.hasErrors('code')}">
+                        </div>
                     </div>
                     <button
                             type="submit"
