small progress towards the hardest part of the project - rendering the questions and setting a limited time to answer + saving the responses - the questions for the test are fetched correctly and mapped to a list of dto and the only thing missing is the template for displaying the question and the naswers

--- a/src/main/resources/templates/test-preview.html
+++ b/src/main/resources/templates/test-preview.html
@@ -26,6 +26,7 @@
                     <p>Status: <span th:text="*{status}"></span></p>
                 </div>
                 <br>
+                <input type="hidden" name="myHiddenValue" th:field="*{id}" th:value="*{id}">
                 <button
                         type="submit"
                         class="btn btn-light px-5 border border-black border-2 shadow rounded">
