question-answer.html template almost done

--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>\\3
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="bg-secondary vh-100 d-flex justify-content-center align-items-center font">
