--- a/src/main/resources/templates/question-answer.html
+++ b/src/main/resources/templates/question-answer.html
@@ -20,17 +20,24 @@
 </head>
 <body class="bg-secondary vh-100 d-flex justify-content-center align-items-center font">
 <div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="bg-light p-3 border border-black border-3 shadow rounded fs-3">
-        <div class="container d-flex flex-column align-items-center gap-4">
+    <div class="bg-light p-3 border border-black border-3 shadow rounded fs-3 w-50">
+        <div class="container d-flex flex-column align-items-center gap-4"
+             th:object="${questionData}">
             <div class="row w-100">
-                <div class="col text-start">#1</div>
-                <div class="col text-center bg-secondary rounded shadow border border-2 border-black text-warning">
-                    0:45
+                <div class="col-sm-12 col-md-4 text-center">
+                    <span th:text="'#' + *{number}">№?</span>
                 </div>
-                <div class="col text-end">2p.</div>
+                <div class="col-sm-12 col-md-4 text-center bg-secondary rounded shadow border border-2 border-black text-warning">
+                    <span>??:??</span>
+                </div>
+                <div class="col-sm-12 col-md-4 text-center">
+                    <span th:text="'p.' + *{points}">p.?</span>
+                </div>
             </div>
             <div class="row w-100 text-center bg-secondary text-white border border-2 border-black rounded shadow">
-                <div class="col">Question?</div>
+                <div class="col">
+                    <span th:text="*{question}">???????????</span>
+                </div>
             </div>
             <div class="w-100">
                 <form>
@@ -42,7 +49,7 @@
                                        name="answer"
                                        type="radio">
                                 <label class="form-check-label" for="answer1">
-                                    Default radio
+                                    <span th:text="*{answer1}">?????</span>
                                 </label>
                             </div>
                         </div>
@@ -53,7 +60,7 @@
                                        name="answer"
                                        type="radio">
                                 <label class="form-check-label" for="answer2">
-                                    Default radio
+                                    <span th:text="*{answer2}">?????</span>
                                 </label>
                             </div>
                         </div>
@@ -66,7 +73,7 @@
                                        name="answer"
                                        type="radio">
                                 <label class="form-check-label" for="answer3">
-                                    Default radio
+                                    <span th:text="*{answer3}">?????</span>
                                 </label>
                             </div>
                         </div>
@@ -77,7 +84,7 @@
                                        name="answer"
                                        type="radio">
                                 <label class="form-check-label" for="answer4">
-                                    Default radio
+                                    <span th:text="*{answer4}">?????</span>
                                 </label>
                             </div>
                         </div>
